--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -1,8 +1,7 @@
-body,
-html {
+body, html {
   line-height: 1;
-  font-family: "PingFang SC", "STHeitiSC-Light", "Helvetica-Light", arial, sans-serif, "Droid Sans Fallback";
-  user-select: none;
+  font-family: 'PingFang SC', 'STHeitiSC-Light', 'Helvetica-Light', arial, sans-serif, 'Droid Sans Fallback';
+  /* user-select: none; */
   -webkit-tap-highlight-color: transparent;
   background: $color-background;
   color: $color-text;
@@ -12,28 +11,28 @@ html {
   position: relative;
 }
 
- .slide-enter-active, .slide-leave-active {
-   transition: all 0.3s
- }
+.slide-enter-active, .slide-leave-active {
+  transition: all 0.3s
+}
 
- .slide-enter-from, .slide-leave-to {
-   transform: translate3d(100%, 0, 0)
- }
+.slide-enter-from, .slide-leave-to {
+  transform: translate3d(100%, 0, 0)
+}
 
-// .list-enter-active, .list-leave-active {
-//   transition: all 0.3s;
-// }
+.list-enter-active, .list-leave-active {
+  transition: all 0.3s;
+}
 
-// .list-enter-from, .list-leave-to {
-//   height: 0 !important;
-// }
+.list-enter-from, .list-leave-to {
+  height: 0 !important;
+}
 
- @keyframes rotate {
-   0% {
-     transform: rotate(0)
-   }
+@keyframes rotate {
+  0% {
+    transform: rotate(0)
+  }
 
-   100% {
-     transform: rotate(360deg)
-   }
- }
+  100% {
+    transform: rotate(360deg)
+  }
+}
