--- a/src/assets/scss/reset.scss
+++ b/src/assets/scss/reset.scss
@@ -59,6 +59,6 @@ li {
 }
 
 body {
-  -webkit-text-size-adjust: none;
+  /* -webkit-text-size-adjust: none; */
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
